
22. Change: cgi script HTML error messages appear in all software development cycle settings except maintenance, or debug mode, or maintnance plus debug mode.  The message has been updated to newer HTML standards.  gcc-style errors is now selectable: it affects the display on the web page but errors logged to the server will still be gcc-style.

23. Change: different cgi script templates produce error messages in formats suitable for the template type.  Same for exceptions.

24. Fix: raise at the end of a simple script no longer causes an unreachable code error. [can this be restored after the other changes I made?]

25. Fix: uninitialized numeric variables no longer crash "?" but are reported as an approprate error.

26. Change: uninitialized variables in expressions now give an unitialized variable error messages instead of general "exception raised" error message.

27. Fix: end of script warnings (like pragma deprecated/depreciated) now appear as messages when template files are used.

28. Fix: deleteIdent function refactored to eliminate inconsistent variable exporting.

29. New: session variables callbacks.  pragma session_import_script, pragma session_export_script, new session import/export type. [tests needed]

30. New: array variables may be deleted with unset.  However, anonymous array types will linger until the end of block.

31. New: team package.  Contains the team.member record.  [docs] [tests]

32. New: teamwork pragmas.  pragma advise, blocked, clarify, dispute, propose, refactor.

33. Fix: fixed more problems with variable exporting when a block is pulled.

34. Change: uninitialized connections and queries in mysqlm give a meaningful error message instead of throwing an exception.

35. Change: style issues for non-meaningful names expanded to include amount, const, info, input, output, result, variable and variables.

??. Around parser.adb 5812: doesn't allow mixing of shell and adascript parameters in a pipeline.  Fix this??

